--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Phyton</span>
+              <span class="caption">C# Unity</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
               </div>
