--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <!meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Virtual Folio - Portfolio HTML5 Template</title>
+  <title>THE_Folio</title>
 
   <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
   
