--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <span class="ti-search"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">SEO</h4>
+              <h4 class="fg-theme">Competitive Programming</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
