--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   
   <!meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>THE_Folio</title>
+  <title>THE</title>
 
-  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/THE.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
   
@@ -30,7 +30,7 @@
   
   <link rel="stylesheet" type="text/css" href="../assets/css/topbar.virtual.css">
 </head>
-<body class="theme-red">
+<body class="theme-blue">
   
   <!-- Back to top button -->
   <div class="btn-back_to_top">
@@ -38,18 +38,18 @@
   </div>
   
   <!-- Setting button -->
-  <div class="config">
+  <!--<div class="config">
     <div class="template-config">
       <!-- Settings -->
-      <div class="d-block">
+      <!--div class="d-block">
         <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
       </div>
       <!-- Puschase -->
-      <div class="d-block">
+      <!--div class="d-block">
         <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
       </div>
       <!-- Help -->
-      <div class="d-block">
+      <!--div class="d-block">
         <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
       </div>
     </div>
@@ -70,13 +70,13 @@
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
     </div>
-  </div>
+  </div>-->
   
   <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_1.jpg)">
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="" class="navbar-brand">THE_Folio</a>
+        <a href="" class="navbar-brand">THE</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -164,7 +164,7 @@
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">PHP</span>
+              <span class="caption">javascript</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
@@ -189,44 +189,49 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">UI / UX Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">92%</div>
+                <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">82%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 99%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">99%</div>
+                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Logo Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
+              <div class="progress-wrapper wow fadeInUp">
+                <span class="caption">Level Design</span>
+                <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- Education -->
     <div class="container pt-5">
       <div class="row">
         <div class="col-md-6 wow fadeInRight">
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2010</div>
+              <div class="title">2019-2021</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Higher Secondary Certificate (H.S.C)</h5>
+                <small class="fg-theme">Govt. Mollartek Udayan College</small>
+                <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->
               </div>
             </li>
             <li>
-              <div class="title">2009</div>
+              <div class="title">2022-2026</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Computer Science and Engineering(BSc)</h5>
+                <small class="fg-theme">Shanto-Mariam University of Creative Technology</small>
+                <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->
               </div>
             </li>
             <li>
@@ -660,7 +665,6 @@
       </div>
       <div class="row justify-content-center mt-3">
         <div class="col-12 mb-3">
-          <!--<h3 class="fw-normal text-center">Subscribe</h3>-->
         </div>
         <div class="col-lg-6">
           <form class="mb-3">
