--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Service</div>
       </div>
-      <h1 class="fw-normal text-center wow fadeInUp">What can i do?</h1>
+      <h1 class="fw-normal text-center wow fadeInUp">What can I do?</h1>
       <div class="row mt-5">
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
@@ -323,7 +323,7 @@
               <span class="ti-desktop"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Web Development</h4>
+              <h4 class="fg-theme">Game Development</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
