--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-search"></span>
+              <span class="ti-settings"></span>
             </div>
             <div class="caption">
               <h4 class="fg-theme">Competitive Programming</h4>
