--- a/index.html
+++ b/index.html
@@ -37,39 +37,39 @@
     <span class="ti-arrow-up"></span>
   </div>
   
-  <!-- Setting button -->
-  <!--<div class="config">
-    <div class="template-config">
-      <!-- Settings -->
-      <!--div class="d-block">
-        <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
-      </div>
-      <!-- Puschase -->
-      <!--div class="d-block">
-        <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
-      </div>
-      <!-- Help -->
-      <!--div class="d-block">
-        <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
-      </div>
-    </div>
-    <div class="set-menu">
-      <p>Select Color</p>
-      <div class="color-bar" data-toggle="selected">
-        <span class="color-item bg-theme-red selected" data-class="theme-red"></span>
-        <span class="color-item bg-theme-blue" data-class="theme-blue"></span>
-        <span class="color-item bg-theme-green" data-class="theme-green"></span>
-        <span class="color-item bg-theme-orange" data-class="theme-orange"></span>
-        <span class="color-item bg-theme-purple" data-class="theme-purple"></span>
-      </div>
-      <select class="custom-select d-block my-2" id="change-page">
-        <option value="">Choose Page</option>
-        <option value="index">Topbar</option>
-        <option value="blog-topbar">Blog (Topbar)</option>
-        <option value="index-2">Minibar</option>
-        <option value="blog-minibar">Blog (Minibar)</option>
-      </select>
-    </div>
+  <!-- Setting button -->	
+  <!--<div class="config">	
+    <div class="template-config">	
+      <!-- Settings -->	
+      <!--div class="d-block">	
+        <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>	
+      </div>	
+      <!-- Puschase -->	
+      <!--div class="d-block">	
+        <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>	
+      </div>	
+      <!-- Help -->	
+      <!--div class="d-block">	
+        <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>	
+      </div>	
+    </div>	
+    <div class="set-menu">	
+      <p>Select Color</p>	
+      <div class="color-bar" data-toggle="selected">	
+        <span class="color-item bg-theme-red selected" data-class="theme-red"></span>	
+        <span class="color-item bg-theme-blue" data-class="theme-blue"></span>	
+        <span class="color-item bg-theme-green" data-class="theme-green"></span>	
+        <span class="color-item bg-theme-orange" data-class="theme-orange"></span>	
+        <span class="color-item bg-theme-purple" data-class="theme-purple"></span>	
+      </div>	
+      <select class="custom-select d-block my-2" id="change-page">	
+        <option value="">Choose Page</option>	
+        <option value="index">Topbar</option>	
+        <option value="blog-topbar">Blog (Topbar)</option>	
+        <option value="index-2">Minibar</option>	
+        <option value="blog-minibar">Blog (Minibar)</option>	
+      </select>	
+    </div>	
   </div>-->
   
   <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_1.jpg)">
@@ -189,48 +189,52 @@
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">UI / UX Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 82%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">82%</div>
+                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">92%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
               <span class="caption">Web Design</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">95%</div>
+                <div class="progress-bar" role="progressbar" style="width: 99%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">99%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Logo Design</span>
+              <span class="caption">Level Design</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
+              </div>
+            </div class="progress-wrapper wow fadeInUp"> 
+            <span class="caption">Logo Design</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
-              <div class="progress-wrapper wow fadeInUp">
-                <span class="caption">Level Design</span>
-                <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Education -->
+    <!-- End Skills -->
+
+    <!-- Start Education -->
     <div class="container pt-5">
       <div class="row">
         <div class="col-md-6 wow fadeInRight">
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2019-2021</div>
-              <div class="details">
-                <h5>Higher Secondary Certificate (H.S.C)</h5>
-                <small class="fg-theme">Govt. Mollartek Udayan College</small>
-                <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->
-              </div>
-            </li>
-            <li>
-              <div class="title">2022-2026</div>
-              <div class="details">
-                <h5>Computer Science and Engineering(BSc)</h5>
-                <small class="fg-theme">Shanto-Mariam University of Creative Technology</small>
+              <div class="title">2019-2021</div>	
+              <div class="details">	
+                <h5>Higher Secondary Certificate (H.S.C)</h5>	
+                <small class="fg-theme">Govt. Mollartek Udayan College</small>	
+                <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->	
+              </div>	
+            </li>	
+            <li>	
+              <div class="title">2022-2026</div>	
+              <div class="details">	
+                <h5>Computer Science and Engineering(BSc)</h5>	
+                <small class="fg-theme">Shanto-Mariam University of Creative Technology</small>	
                 <!--<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>-->
               </div>
             </li>
@@ -630,47 +634,47 @@
     </div>
   </div> <!-- End Contact -->
   
-  <!-- Footer -->
-  <div class="vg-footer">
-    <!--<h1 class="text-center">Virtual Folio</h1>-->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 py-3">
-          <div class="footer-info">
-           <!-- <p>Where to find me</p>
-            <hr class="divider">
-            <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>-->
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 py-3">
-          <div class="float-lg-middle">
-            <p>Follow me</p>
-            <hr class="divider">
-            <ul class="list-unstyled">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Youtube</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 py-3">
-          <div class="float-lg-right">
-            <p>Contact me</p>
-            <hr class="divider">
-            <ul class="list-unstyled">
-              <li>tasifthe2002@gmail.com</li>
-              <li>+8801979648494</li>
-              <li>tasifhe</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center mt-3">
-        <div class="col-12 mb-3">
-        </div>
-        <div class="col-lg-6">
-          <form class="mb-3">
-            <div class="input-group">
-              <!input type="text" class="form-control" placeholder="Email address">
+  <!-- Footer -->	
+  <div class="vg-footer">	
+    <!--<h1 class="text-center">Virtual Folio</h1>-->	
+    <div class="container">	
+      <div class="row">	
+        <div class="col-lg-4 py-3">	
+          <div class="footer-info">	
+           <!-- <p>Where to find me</p>	
+            <hr class="divider">	
+            <p class="fs-large fg-white">1600 Amphitheatre Parkway Mountain View, California 94043 US</p>-->	
+          </div>	
+        </div>	
+        <div class="col-md-6 col-lg-3 py-3">	
+          <div class="float-lg-middle">	
+            <p>Follow me</p>	
+            <hr class="divider">	
+            <ul class="list-unstyled">	
+              <li><a href="#">Facebook</a></li>	
+              <li><a href="#">Youtube</a></li>	
+            </ul>	
+          </div>	
+        </div>	
+        <div class="col-md-6 col-lg-3 py-3">	
+          <div class="float-lg-right">	
+            <p>Contact me</p>	
+            <hr class="divider">	
+            <ul class="list-unstyled">	
+              <li>tasifthe2002@gmail.com</li>	
+              <li>+8801979648494</li>	
+              <li>tasifhe</li>	
+            </ul>	
+          </div>	
+        </div>	
+      </div>	
+      <div class="row justify-content-center mt-3">	
+        <div class="col-12 mb-3">	
+        </div>	
+        <div class="col-lg-6">	
+          <form class="mb-3">	
+            <div class="input-group">	
+              <!input type="text" class="form-control" placeholder="Email address">	
               <!input type="submit" class="btn btn-theme no-shadow" value="Subscribe">
             </div>
           </form>
