--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-paint-bucket"></span>
+              <span class="ti-desktop"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Web Design</h4>
+              <h4 class="fg-theme">Game Development</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
@@ -302,10 +302,10 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-settings"></span>
+              <span class="ti-mouse"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Competitive Programming</h4>
+              <h4 class="fg-theme">Level Design</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
@@ -324,10 +324,10 @@
         <div class="col-md-6 col-lg-4 col-xl-3">
           <div class="card card-service wow fadeInUp">
             <div class="icon">
-              <span class="ti-desktop"></span>
+              <span class="ti-paint-bucket"></span>
             </div>
             <div class="caption">
-              <h4 class="fg-theme">Game Development</h4>
+              <h4 class="fg-theme">Web Design</h4>
               <p>There are many variations of passages of Lorem Ipsum available</p>
             </div>
           </div>
@@ -340,19 +340,19 @@
     <div class="container">
       <div class="row section-counter">
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="768">768</h1>
+          <h1 class="number" data-number="3">3</h1>
           <span>Clients</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="230">230</h1>
+          <h1 class="number" data-number="32">32</h1>
           <span>Project Compleate</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="97">97</h1>
+          <h1 class="number" data-number="12">12</h1>
           <span>Project Ongoing</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
-          <h1 class="number" data-number="699">699</h1>
+          <h1 class="number" data-number="20">20</h1>
           <span>Client Satisfaction</span>
         </div>
       </div>
@@ -439,6 +439,7 @@
   </div> <!-- End Portfolio page -->
   
   <!-- Testimonial -->
+  <!--
   <div class="vg-page page-testimonial">
     <div class="container">
       <h1 class="text-center fw-normal wow fadeInUp">What Clients are Saying</h1>
@@ -495,9 +496,11 @@
         </div>
       </div>
     </div>
-  </div> <!-- End testimonial -->
+  </div> <!-- End testimonial -->-->
+  
   
   <!-- Client -->
+  <!--
   <div class="vg-page page-client">
     <div class="container">
       <div class="row">
@@ -548,6 +551,7 @@
   </div> <!-- End client -->
   
   <!-- Blog -->
+  <!--
   <div class="vg-page page-blog" id="blog">
     <div class="container">
       <div class="text-center">
@@ -605,13 +609,13 @@
         <div class="badge badge-subhead">Contact</div>
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
-      <div class="row py-5">
-        <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
-          <div class="vg-maps">
-            <div id="google-maps" style="width: 100%; height: 100%;"></div>
-          </div>
-        </div>
-        <div class="col-lg-5">
+      <!div class="row py-5">
+        <!div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
+          <!div class="vg-maps">
+            <!div id="google-maps" style="width: 100%; height: 100%;"></div>
+          <!/div>
+        <!/div>
+        <div class="col-lg-5 mx-auto">
           <form class="vg-contact-form">
             <div class="form-row">
               <div class="col-12 mt-3 wow fadeInUp">
@@ -628,6 +632,9 @@
               </div>
               <button type="submit" class="btn btn-theme mt-3 wow fadeInUp ml-1">Send Message</button>
             </div>
+          </form>
+        </div>
+      </div>        
           </form>
         </div>
       </div>
@@ -651,7 +658,7 @@
             <p>Follow me</p>	
             <hr class="divider">	
             <ul class="list-unstyled">	
-              <li><a href="#">Facebook</a></li>	
+              <li><a href="https://www.facebook.com/tasifhe/" target="_blank">Facebook</a></li>
               <li><a href="#">Youtube</a></li>	
             </ul>	
           </div>	
@@ -663,7 +670,7 @@
             <ul class="list-unstyled">	
               <li>tasifthe2002@gmail.com</li>	
               <li>+8801979648494</li>	
-              <li>tasifhe</li>	
+              <!li>tasifhe</li>
             </ul>	
           </div>	
         </div>	
@@ -706,7 +713,7 @@
 
   <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
 
-  <script src="../assets/js/google-maps.js"></script>
+  <!script src="../assets/js/google-maps.js"></script>
     
   <script src="../assets/js/topbar-virtual.js"></script>
 
