--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="" class="navbar-brand">THE</a>
+        <a href="" class="navbar-brand"><img src="/assets/THE.ico" alt="Logo">THE</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -91,9 +91,9 @@
             <li class="nav-item">
               <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
@@ -370,7 +370,7 @@
         <button class="btn btn-theme-outline selected" data-filter="*">All</button>
         <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
         <button class="btn btn-theme-outline" data-filter=".template">Template</button>
-        <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
+        <button class="btn btn-theme-outline" data-filter=".ios">Games</button>
         <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
         <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
         <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button>
@@ -434,6 +434,7 @@
       </div> <!-- End gridder -->
       <div class="text-center wow fadeInUp">
         <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
+      </div>
       </div>
     </div>
   </div> <!-- End Portfolio page -->
