--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <title>THE</title>
 
-  <link rel="shortcut icon" href="../assets/THE.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/NEW-LOGO69.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
   
@@ -71,12 +71,11 @@
       </select>	
     </div>	
   </div>-->
-  
-  <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_1.jpg)">
+  <div class="vg-page page-home" id="home" style="background-image: url(assets/img/THE/Background.jpg)">
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="" class="navbar-brand"><img src="/assets/THE.ico" alt="Logo">THE</a>
+        <a href="" class="navbar-brand"><img src="/assets/THE2.ico" alt="Logo">THE</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
@@ -100,7 +99,7 @@
           </ul>
           <ul class="nav ml-auto">
             <li class="nav-item">
-              <button class="btn btn-fab btn-theme no-shadow">En</button>
+              <!--<button class="btn btn-fab btn-theme no-shadow">En</button><!-->
             </li>
           </ul>
         </div>
