--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <title>THE</title>
 
-  <link rel="shortcut icon" href="assets/NEW-LOGO69.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/THE2.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
   
