--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
       <div class="container">
-        <a href="" class="navbar-brand"><img src="/assets/THE2.ico" alt="Logo">THE</a>
+        <a href="" class="navbar-brand"><img src="/assets/THE2.ico" alt="Logo"></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
