--- a/index.html
+++ b/index.html
@@ -743,9 +743,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <!--<li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>-->
+                        <li><span class="bi bi-phone"></span> +880 1979648494</li>
+                        <li><span class="bi bi-envelope"></span> tasifthe2002@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
