--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/tasifhe/"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
