--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                         <li><a href="https://www.facebook.com/tasifhe/"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/tasif-hossain-70b372202/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
