--- a/index.html
+++ b/index.html
@@ -737,10 +737,11 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        "Thank you for taking the time to view my portfolio. 
+                        If you have any questions, feedback, or just want to 
+                        say hello, feel free to get in touch with me. 
+                        You can reach me through the contact form on my website, 
+                        or via email. I look forward to hearing from you!"
                       </p>
                       <ul class="list-ico">
                         <!--<li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>-->
@@ -750,10 +751,10 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="https://www.facebook.com/tasifhe/"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/tasifhe/" target="_blank"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/tasif-hossain-70b372202/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/tasif-hossain-70b372202/" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -773,7 +774,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>GrandFleet</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
@@ -781,7 +782,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Powered by GrandFleet
             </div>
           </div>
         </div>
