Project_FOLIO Update

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">WORKS COMPLETED</span>
               </div>
             </div>
@@ -366,9 +366,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/PGWmin.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/PGW_SS1 (1).png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -376,12 +376,12 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-sm-8">
                     <h2 class="w-title">Procedural World Generation</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Level & environment design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Level & environment design</span> / <span class="w-date">18 Sep. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> </a>
+                      <a href="portfolio-details_PGW.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -390,9 +390,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/TP_Player_Controller.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -405,7 +405,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details_TPC.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -414,9 +414,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -424,12 +424,12 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-sm-8">
                     <h2 class="w-title">2D Platformer</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">18 Sep. 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details_PGW.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -438,7 +438,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/RAWWAR_GIFF.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/RAWWAR_GIFF-min.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/ProjectRawWar.png" alt="" class="img-fluid">
                 </div>
@@ -446,9 +446,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Project Rawwar</h2>
+                    <h2 class="w-title">Rawwar(Type2Fight)</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Work on progress</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Work on progress</span> / <span class="w-date">11 July. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -486,9 +486,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
