--- a/portfolio-details_PGW.html
+++ b/portfolio-details_PGW.html
@@ -131,7 +131,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Rawwar</h2>
+              <h2>Procedural World Generation</h2>
               <p>
                 This project is a fascinating project aimed at creating vast and immersive virtual worlds within the Unity game engine. Leveraging the power of procedural generation techniques, this project generates dynamic and ever-changing landscapes, terrains, and environments to provide players with unique and engaging gaming experiences. The project's primary objective is to create visually stunning and diverse worlds, ensuring replayability and enhancing gameplay depth.
               </p>
