--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -405,7 +398,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details_TPC.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href=""> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -464,7 +457,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
             <div class="work-box">
               <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -494,7 +487,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Scriptable Object</h2>
+                    <h2 class="w-title">Drawnscape</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Unity 3D & 2D</span> / <span class="w-date">18 Sep. 2017</span>
                     </div>
