--- a/portfolio-details_RAWWAR.html
+++ b/portfolio-details_RAWWAR.html
@@ -103,15 +103,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/RAWWAR_PLAYGROUND.png" alt="">
+                  <img src="assets/img/RAWWAR_PLAYGROUND3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/RAWWAR_PLAYGROUND3.png" alt="">
+                  <img src="assets/img/RAWWAR_PLAYGROUND3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/RAWWAR_MAINMENU.png" alt="">
+                  <img src="assets/img/RAWWAR_MAINMENU.jpg" alt="">
                 </div>
 
               </div>
