--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
     </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/PGW_BG_OVERLAY.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -361,7 +361,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
             <div class="work-box">
               <a href="assets/img/PGWmin.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/PGW_SS1 (1).png" alt="" class="img-fluid">
+                  <img src="assets/img/PGW_SS1 (1).jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -684,7 +684,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Send Message
                       </h5>
                     </div>
                     <div>
