--- a/portfolio-details_PGW.html
+++ b/portfolio-details_PGW.html
@@ -104,15 +104,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (1).png" alt="">
+                  <img src="assets/img/PGW_SS1 (1).jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (2).png" alt="">
+                  <img src="assets/img/PGW_SS1 (2).jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (3).png" alt="">
+                  <img src="assets/img/PGW_SS1 (3).jpg" alt="">
                 </div>
 
               </div>
