--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/PGWmin.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/PGWmin_GIF.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/PGW_SS1 (1).jpg" alt="" class="img-fluid">
                 </div>
