Minor_fixes and Color sceme changed

--- a/portfolio-details_RAWWAR.html
+++ b/portfolio-details_RAWWAR.html
@@ -73,7 +73,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/RAWWAR_MAINMENU.png)">
+  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/RAWWAR_MAINMENU.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
