--- a/portfolio-details_RAWWAR.html
+++ b/portfolio-details_RAWWAR.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/RAWWAR_PLAYGROUND3.jpg" alt="">
+                  <img src="assets/img/RAWWAR_PLAYGROUND.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
