--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Procedural World Generation</h2>
+                    <h2 class="w-title">Procedural World Generation(Infinite)</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Level & environment design</span> / <span class="w-date">18 Sep. 2022</span>
                     </div>
@@ -407,22 +407,22 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/PGW_2_FOREST-Compressed.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/" alt="" class="img-fluid">
+                  <img src="assets/img/PGW_2_FOREST(2).png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">2D Platformer</h2>
+                    <h2 class="w-title">Procedular World Generation(Forest limited)</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">18 Sep. 2022</span>
+                      <span class="w-ctegory">Level Design</span> / <span class="w-date">23 Dec. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details_PGW.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details_PGW_Forest.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
