--- a/portfolio-details_TPC.html
+++ b/portfolio-details_TPC.html
@@ -104,15 +104,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (1).png" alt="">
+                  <img src="assets/img/TP_Player_Controller.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (2).png" alt="">
+                  <img src="assets/img/TP_Player_Controller(1).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/PGW_SS1 (3).png" alt="">
+                  <img src="assets/img/ThirdPersonState-GIF.gif" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/TP_Player_Controller(2).png" alt="">
                 </div>
 
               </div>
@@ -124,16 +127,22 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Level Design(Unity)</li>
+                <li><strong>Category</strong>: Player controller(Unity)</li>
                 <li><strong>Client</strong>: GrandFleet</li>
-                <li><strong>Project date</strong>: 10 July, 2023</li>
+                <li><strong>Project date</strong>: 11 Oct, 2023</li>
                 <!--<li><strong>Project URL</strong>: <a href="https://grand-fleet.itch.io/rawwar" target="_blank">Project Rawwar</a></li>-->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Project Rawwar</h2>
+              <h2>3rd Person Character Controller(State Machine)</h2>
               <p>
-                This project is a fascinating project aimed at creating vast and immersive virtual worlds within the Unity game engine. Leveraging the power of procedural generation techniques, this project generates dynamic and ever-changing landscapes, terrains, and environments to provide players with unique and engaging gaming experiences. The project's primary objective is to create visually stunning and diverse worlds, ensuring replayability and enhancing gameplay depth.
+                Tired of clunky character movement in your Unity game? This project is for you!<br>
+
+                I will craft a fluid and responsive third-person controller powered by a modular state machine. Say goodbye to animation jitters and hello to seamless transitions between idling, walking, running, jumping, and more.
+
+                <br> No more spaghetti code! my architecture is clean and adaptable, making adding new actions or tweaking existing ones a breeze. Plus, we'll utilize the New Input System for precise handling with keyboard, mouse, or gamepad.
+
+                <br> The Animator component joins the party! We'll blend animations like a master chef, ensuring characters move as gracefully as they fight. Whether you're a gameplay guru or a programming padawan, this project lays the foundation for your game's movement mastery.
               </p>
             </div>
           </div>
