--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                 <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
-                <p data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="counter purecounter"></p>
+                <p data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="counter purecounter"></p>
                 <span class="counter-text">WORKS COMPLETED</span>
               </div>
             </div>
@@ -383,9 +383,9 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/ThirdPersonState-GIF.gif" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/TP_Player_Controller.png" alt="" class="img-fluid">
+                  <img src="assets/img/TP_Player_Controller(1).png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -393,12 +393,12 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-sm-8">
                     <h2 class="w-title">3rd Person Character controller</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Unity 3D</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Unity 3D</span> / <span class="w-date">11 Oct, 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
+                      <a href="portfolio-details_TPC.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -489,7 +489,7 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
                   <div class="col-sm-8">
                     <h2 class="w-title">Drawnscape</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Unity 3D & 2D</span> / <span class="w-date">18 Sep. 2017</span>
+                      <span class="w-ctegory">Unity 2D</span> / <span class="w-date">18 Dec. 2023</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -501,6 +501,31 @@ I have experience working with Adobe Creative Suite, including Photoshop, Illust
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="assets/img/" data-gallery="portfolioGallery" class="portfolio-lightbox">
+                <div class="work-img">
+                  <img src="assets/img/" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">TimeShift Sleuth</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Unity 3D</span> / <span class="w-date">18 Sep. 2023</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          
 
         </div>
       </div>
